sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: 'while' expected but identifier found.
    i=0
    ^AlgCombSort:12: error: '(' expected but ';' found.
    while ((i+ecart)< lgr){
^AlgCombSort:19: error: ';' expected but 'while' found.
  } while ( ecart>1 || c==1)
    ^AlgCombSort:23: error: Unmatched closing brace '}' ignored here
}
^